# adore_planning

./: CMakeLists.txt  README.md  package.xml
include/planning/: idm.hpp  multi_agent_PID.hpp  multi_agent_planner.hpp  planning_helpers.hpp  speed_profile_qp.hpp  speed_profiles.hpp  trajectory_planner.hpp
src/: multi_agent_PID.cpp  multi_agent_planner.cpp  speed_profiles.cpp  trajectory_planner.cpp
test/: CMakeLists.txt  helpers_test.cpp  idm_test.cpp
